# OS-labs

channel/: CMakeLists.txt  buffered_channel.h  main.cpp
lib/windows/: Number.cpp  Number.h  Vector.cpp  Vector.h
matrix/: CMakeLists_l.txt  CMakeLists_w.txt  main.cpp
matrix/common/: matrix.cpp  matrix.h
matrix/pthread/: pthread_impl.cpp  pthread_impl.h
matrix/thread/: thread_impl.cpp  thread_impl.h
matrix/winapi/: winapi_impl.cpp  winapi_impl.h
pipe/linux/: A.cpp  M.cpp  P.cpp  S.cpp  main.cpp
pipe/windows/: A.cpp  M.cpp  P.cpp  S.cpp  main.cpp
process/linux/: killer.cpp  user.cpp
process/windows/: killer.cpp  user.cpp
